[tool.poetry]
name = "sqlalchemy-basics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3"
SQLAlchemy-Utils = "^0.36.1"
psycopg2 = "^2.8"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
testcontainers = "^2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
